Implement /api/teams routes
