# internal/router/router.go
@@ -36,6 +36,7 @@ func New(c *container.Container, allowedOriginsCORS []string) *chi.Mux {
 		r.Route("/statuses", statusRoutes(c))
 		r.Route("/priorities", priorityRoutes(c))
 		r.Route("/impacts", impactRoutes(c))
+		r.Route("/teams", teamRoutes(c))
 
 		r.Post("/incidents", createIncident)
 		r.Get("/incidents", listIncidents)
